--- a/minecraft.plist
+++ b/minecraft.plist
@@ -17,13 +17,13 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://isteal.me/isteallogo.png</string>
+					<string>https://k.top4top.io/p_2480hkarc1.jpg</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://isteal.me/isteallogo.png</string>
+					<string>https://k.top4top.io/p_2480hkarc1.jpg</string>
 				</dict>
 			</array>
 			<key>metadata</key>
