--- a/minecraft.plist
+++ b/minecraft.plist
@@ -1,43 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>items</key>
-	<array>
-		<dict>
-			<key>assets</key>
-			<array>
-				<dict>
-					<key>kind</key>
-					<string>software-package</string>
-					<key>url</key>
-					<string>https://up-ipa.xyz/share/XDx12Qr6FWoHRvjz/direct</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>url</key>
-					<string>https://k.top4top.io/p_2480hkarc1.jpg</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>url</key>
-					<string>https://k.top4top.io/p_2480hkarc1.jpg</string>
-				</dict>
-			</array>
-			<key>metadata</key>
-			<dict>
-				<key>bundle-identifier</key>
-				<string>com.mojang.minecraftpe</string>
-				<key>bundle-version</key>
-				<string>1.19.41</string>
-				<key>kind</key>
-				<string>software</string>
-				<key>title</key>
-				<string>Minecraft</string>
-			</dict>
-		</dict>
-	</array>
-</dict>
+    <dict>
+        <key>items</key>
+        <array>
+            <dict>
+                <key>assets</key>
+                <array>
+                    <dict>
+                        <key>kind</key>
+                        <string>software-package</string>
+                        <key>url</key>
+                        <string>https://tweakhome.app/Apps/signed/Minecraft.ipa</string>
+                    </dict>
+                    <dict>
+                    <key>kind</key>
+                    <string>display-image</string>
+                    <key>needs-shine</key>
+                    <true/>
+                    <key>url</key>
+                    <string>https://k.top4top.io/p_2480hkarc1.jpg</string>
+                    </dict>
+                </array>
+                <key>metadata</key>
+                <dict>
+                    <key>bundle-identifier</key>
+                    <string>app.tweakhome.Minecraft</string>
+                    <key>bundle-version</key>
+                    <string>1</string>
+                    <key>kind</key>
+                    <string>software</string>
+                    <key>title</key>
+                    <string>Minecraft</string>
+                </dict>
+            </dict>
+        </array>
+    </dict>
 </plist>
