--- a/esign.plist
+++ b/esign.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://archive.org/download/esign_20220624_1823/Esign.ipa</string>
+					<string>https://www.installonair.com/app-download-link/z1UOFa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
