--- a/esign.plist
+++ b/esign.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://archive.org/download/esign_20221208/Esign.ipa</string>
+					<string>https://archive.org/download/esign_20220624_1823/Esign.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://k.top4top.io/p_2480hkarc1.jpg</string>
+					<string>https://c.top4top.io/p_2492aajxk1.jpg</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://k.top4top.io/p_2480hkarc1.jpg</string>
+					<string>https://c.top4top.io/p_2492aajxk1.jpg</string>
 				</dict>
 			</array>
 			<key>metadata</key>
